@@ -1,10 +1,17 @@
 API ChangeLog	(see the ChangeLog in each 'apps' directory for
 		app specific changes
 
+
+24-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
+	Added a few english abbrevs to better parse BW exported
+		texts.
+	Added Error() raised on improperly parsed VerseKey
+		text.
+
 22-Jun-2002	Daniel Glassey <dglassey@crosswire.org>
 	Fixes to allow compiling with gcc3
 	add configure support to libVCL and change X!/installmgr
-	  to build it automatically
+		to build it automatically
 	remove --enable-vcl from core sword
 
 13-Jun-2002     Troy A. Griffitts <scribe@crosswire.org>
